--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div  class="main">
         <form name="forms">
-            <input id="clear" type="text" name="answer"><br><br>
+            <input dir="rtl" id="clear" type="text" name="answer"><br><br>
 
             <input type="button" value="7" onclick="forms.answer.value += '7'" >
             <input type="button" value="8" onclick="forms.answer.value += '8'" >
@@ -38,7 +38,7 @@
             <input type="button" value="0" onclick="forms.answer.value += '0'" >
             <input type="button" value="=" onclick="forms.answer.value = eval(forms.answer.value) " >
             <br><br>
-            <input type="button" id="clear" value="clear All" onclick="forms.answer.value = ''" >
+            <input type="button" id="clear" value="Clear" onclick="forms.answer.value = ''" >
 
 
         </form>
