--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
             <br><br>
             <input type="button" value="/" onclick="forms.answer.value += '/'" >
             <input type="button" value="0" onclick="forms.answer.value += '0'" >
-            <input type="button" value="=" onclick="forms.answer.value = eval(forms.answer.value) " >
+            <input type="button" value="." onclick="forms.answer.value += '.'" >
             <br><br>
             <input type="button" id="clear" value="Clear" onclick="forms.answer.value = ''" >
+            <br><br>
+            <input type="button" id="clear" value="=" onclick="forms.answer.value = eval(forms.answer.value) " >
+
 
 
         </form>
