--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div  class="main">
         <form name="forms">
-            <input dir="rtl" id="clear" type="text" name="answer"><br><br>
+            <input  id="clearr" type="text" name="answer"><br><br>
 
             <input type="button" value="7" onclick="forms.answer.value += '7'" >
             <input type="button" value="8" onclick="forms.answer.value += '8'" >
